--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <meta charset="utf-8">
@@ -7,23 +8,23 @@
   <meta name="description" content="">
   <meta name="author" content="Lalit R">
 
-  <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
 
   <link href="/css/style.css" rel="stylesheet">
 
-	<title>SEO Title</title>
+  <title>SEO Title</title>
 
 </head>
-  <body class="js">
 
-    <div id="preloader"></div>
+<body class="js">
 
-    <header id="header" class="fixed-top">
+  <div id="preloader"></div>
+
+  <header id="header" class="fixed-top">
 
 
-      <div class="container">
+    <div class="container">
 
 
       <div class="logo float-left">
@@ -32,17 +33,17 @@
 
 
       </div>
-    
+
       <nav class="main-nav float-right d-none d-lg-block">
         <ul>
-          <li><a href="/" class="active">nav1</a></li>
+          <li><a href="#" class="active">nav1</a></li>
           <li><a href="/">nav2</a></li>
           <li><a href="/">nav3</a></li>
 
           <li><a href="/">nav4</a></li>
         </ul>
       </nav>
-      
+
     </div>
   </header>
 
@@ -53,20 +54,19 @@
 
 
 
-<section class="copyright container-fluid">
-	<div class="container">
-<span>© Brand Name</span>
-<span><a href="/terms">Terms & Conditions</a></span>
-<span><a href="/privacy-policy">Privacy Policy & Disclaimer</a></span>
-		</div>
-</section>
- <footer>
- 	      <script src="/node_modules/jquery/dist/jquery.min.js"></script>
- 	  <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/node_modules/owl-carousel/owl-carousel/owl.carousel.min.js"></script>
-    <script src="/js/custom.js"></script>
+  <section class="copyright container-fluid">
+    <div class="container">
+      <span>© Brand Name</span>
+      <span><a href="/terms">Terms & Conditions</a></span>
+      <span><a href="/privacy-policy">Privacy Policy & Disclaimer</a></span>
+    </div>
+  </section>
+  <footer>
 
- </footer>
+    <script src="/javascript/main.js"></script>
+
+  </footer>
 
 </body>
+
 </html>
